# pest-control-ai

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  app.py  config.py  database.py  pyproject.toml
backend/data/: seed.py
backend/models/: model.py
backend/routes/: route.py
backend/schemas/: schema.py
backend/services/: comms.py  llm.py  service.py
backend/services/agents/: customer_service.py  operations.py  qualification.py  reporting.py
docs/: how_to_setup.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  styles.css
frontend/src/components/: AdminPanel.jsx  Auth.jsx  ChangePasswordModal.jsx  Chat.jsx  Dashboard.jsx  Jobs.jsx  Leads.jsx  MarkdownText.jsx  Profile.jsx  Reports.jsx
