[tool.poetry]
name = "pest-control-ai"
version = "0.1.0"
description = "AI-powered pest control business automation suite"
authors = ["Ravi Vaghasiya"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.0"
pydantic-settings = "^2.6.0"
anthropic = "^0.40.0"
openai = "^1.54.0"
psycopg2-binary = ">=2.9.9"
python-multipart = "^0.0.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
